# Visao-Computacional

./: .gitignore  cinza-blur-bordas-opencv.py  manipulando-img-opencv.py  pyproject.toml  rgb-bgr-opencv.py  script.py  video-webcan-opencv.py
arquivos/: script.py
